# RL-Benchmarks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SPDX.spdx  main.py  noxfile.py  pyproject.toml
.devcontainer/: Dockerfile  README.md  build.py  devcontainer.json
.github/workflows/: pre-commit.yml  pytest.yml
containers/: README.md  build.sh  core.def  miniconda.def  mujoco.def  rl_benchmarks.def
src/: __init__.py  environments.py  lightning.py  models.py  utils.py
src/ci/: utils.py
src/misc/: conversion.py
src/tests/: README.md  basic_test.py
tests/: conftest.py  environment_test.py  eval_test.py  logging_test.py  solve_test.py  speed_test.py  syndeo-node-4-test-speed.sh  syndeo-node-4-test-train.sh  train_test.py  utils_test.py
tests/assets/cartpole_checkpoint_cfc/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
tests/assets/cartpole_checkpoint_cfc/policies/default_policy/: policy_state.pkl  rllib_checkpoint.json
tests/assets/cartpole_checkpoint_lstm/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
tests/assets/cartpole_checkpoint_lstm/policies/default_policy/: policy_state.pkl
tests/assets/cartpole_checkpoint_mlp/: .tune_metadata  algorithm_state.pkl  rllib_checkpoint.json
tests/assets/cartpole_checkpoint_mlp/policies/default_policy/: policy_state.pkl
