[tool.poetry]
name = "rl_benchmarks"
version = "0.1.0"
description = "Suite of RL control policy environments for benchmarking."
authors = ["William Li <william.li@ll.mit.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dm-tree = "0.1.8"
future = "1.0.0"
gymnasium = {extras = ["classic-control", "mujoco"], version = "0.29.1"}
lz4 = "4.3.3"
mujoco = "2.3.7"
ncps = "0.0.7"
numpy = "1.26.4"
pandas = "2.2.0"
pyarrow = "15.0.0"
requests = "2.31.0"
ray = "2.5.0"
scikit-image = "0.22.0"
tensorboard = "2.14.1"
tensorboardX = "2.6.2.2"
tensorflow-probability = "0.23.0"
torch = "2.2.0"
torchvision = "0.17.0"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
gputil = "*"
nox = "*"
pdoc = "*"
pre-commit = "*"
pytest = "*"
mypy = "*"
scalene = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 90
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.vscode
  | \.nox
  | \docs
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
